gen/pl/jakubchmura/snmp/mib/parser/SmiParser.java
// This is a generated file. Not intended for manual editing.
package pl.jakubchmura.snmp.mib.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static pl.jakubchmura.snmp.mib.psi.SmiTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmiParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ASSIGNMENT) {
      r = assignment(b, 0);
    }
    else if (t == BIT_OR_OBJECT_IDENTIFIER_VALUE) {
      r = bitOrObjectIdentifierValue(b, 0);
    }
    else if (t == BUILTIN_TYPE) {
      r = builtinType(b, 0);
    }
    else if (t == BUILTIN_VALUE) {
      r = builtinValue(b, 0);
    }
    else if (t == CHOICE_TYPE) {
      r = choiceType(b, 0);
    }
    else if (t == DEFINED_MACRO_TYPE) {
      r = definedMacroType(b, 0);
    }
    else if (t == DEFINED_TYPE) {
      r = definedType(b, 0);
    }
    else if (t == DEFINED_TYPE_NAME) {
      r = definedTypeName(b, 0);
    }
    else if (t == DEFINED_VALUE_NAME) {
      r = definedValueName(b, 0);
    }
    else if (t == ELEMENT_TYP) {
      r = elementTyp(b, 0);
    }
    else if (t == ELEMENT_TYPE_NAME) {
      r = elementTypeName(b, 0);
    }
    else if (t == EXPORT_LIST) {
      r = exportList(b, 0);
    }
    else if (t == IMPORT_LIST) {
      r = importList(b, 0);
    }
    else if (t == INDEX_TYPE) {
      r = indexType(b, 0);
    }
    else if (t == INDEX_VALUE) {
      r = indexValue(b, 0);
    }
    else if (t == MIB_NODE) {
      r = mibNode(b, 0);
    }
    else if (t == MODULE_DEFINITION) {
      r = moduleDefinition(b, 0);
    }
    else if (t == MODULE_IDENTIFIER) {
      r = moduleIdentifier(b, 0);
    }
    else if (t == MODULE_IDENTIFIER_DEFINITION) {
      r = moduleIdentifierDefinition(b, 0);
    }
    else if (t == NAME_AND_NUMBER) {
      r = nameAndNumber(b, 0);
    }
    else if (t == NAME_VALUE_INDEX) {
      r = nameValueIndex(b, 0);
    }
    else if (t == NAME_VALUE_STRING) {
      r = nameValueString(b, 0);
    }
    else if (t == NAMED_NUMBER) {
      r = namedNumber(b, 0);
    }
    else if (t == NUMBER) {
      r = number(b, 0);
    }
    else if (t == SEQUENCE_OF_TYPE) {
      r = sequenceOfType(b, 0);
    }
    else if (t == SEQUENCE_TYPE) {
      r = sequenceType(b, 0);
    }
    else if (t == SNMP_AGENT_CAPABILITIES_MACRO_TYPE) {
      r = snmpAgentCapabilitiesMacroType(b, 0);
    }
    else if (t == SNMP_DEF_VAL_PART) {
      r = snmpDefValPart(b, 0);
    }
    else if (t == SNMP_INDEX_PART) {
      r = snmpIndexPart(b, 0);
    }
    else if (t == SNMP_MODULE_COMPLIANCE_MACRO_TYPE) {
      r = snmpModuleComplianceMacroType(b, 0);
    }
    else if (t == SNMP_MODULE_IDENTITY_MACRO_TYPE) {
      r = snmpModuleIdentityMacroType(b, 0);
    }
    else if (t == SNMP_NOTIFICATION_GROUP_MACRO_TYPE) {
      r = snmpNotificationGroupMacroType(b, 0);
    }
    else if (t == SNMP_NOTIFICATION_TYPE_MACRO_TYPE) {
      r = snmpNotificationTypeMacroType(b, 0);
    }
    else if (t == SNMP_OBJECT_GROUP_MACRO_TYPE) {
      r = snmpObjectGroupMacroType(b, 0);
    }
    else if (t == SNMP_OBJECT_IDENTITY_MACRO_TYPE) {
      r = snmpObjectIdentityMacroType(b, 0);
    }
    else if (t == SNMP_OBJECT_TYPE_MACRO_TYPE) {
      r = snmpObjectTypeMacroType(b, 0);
    }
    else if (t == SNMP_TEXTUAL_CONVENTION_MACRO_TYPE) {
      r = snmpTextualConventionMacroType(b, 0);
    }
    else if (t == SNMP_TRAP_TYPE_MACRO_TYPE) {
      r = snmpTrapTypeMacroType(b, 0);
    }
    else if (t == SYMBOL) {
      r = symbol(b, 0);
    }
    else if (t == SYMBOL_NAME) {
      r = symbolName(b, 0);
    }
    else if (t == SYMBOLS_FROM_MODULE) {
      r = symbolsFromModule(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == TYPE_ASSIGNMENT) {
      r = typeAssignment(b, 0);
    }
    else if (t == TYPE_NAME) {
      r = typeName(b, 0);
    }
    else if (t == VALUE) {
      r = value(b, 0);
    }
    else if (t == VALUE_ASSIGNMENT) {
      r = valueAssignment(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return mibFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSIGNMENT, TYPE_ASSIGNMENT, VALUE_ASSIGNMENT),
    create_token_set_(BIT_OR_OBJECT_IDENTIFIER_VALUE, BUILTIN_VALUE, DEFINED_VALUE_NAME, VALUE),
    create_token_set_(BUILTIN_TYPE, CHOICE_TYPE, DEFINED_MACRO_TYPE, DEFINED_TYPE,
      SEQUENCE_OF_TYPE, SEQUENCE_TYPE, SNMP_AGENT_CAPABILITIES_MACRO_TYPE, SNMP_MODULE_COMPLIANCE_MACRO_TYPE,
      SNMP_MODULE_IDENTITY_MACRO_TYPE, SNMP_NOTIFICATION_GROUP_MACRO_TYPE, SNMP_NOTIFICATION_TYPE_MACRO_TYPE, SNMP_OBJECT_GROUP_MACRO_TYPE,
      SNMP_OBJECT_IDENTITY_MACRO_TYPE, SNMP_OBJECT_TYPE_MACRO_TYPE, SNMP_TEXTUAL_CONVENTION_MACRO_TYPE, SNMP_TRAP_TYPE_MACRO_TYPE,
      TYPE),
  };

  /* ********************************************************** */
  // FROM valueConstraintList
  static boolean alphabetConstraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alphabetConstraint")) return false;
    if (!nextTokenIs(b, FROM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FROM);
    r = r && valueConstraintList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ANY | (ANY DEFINED BY IDENTIFIER_STRING)
  static boolean anyType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anyType")) return false;
    if (!nextTokenIs(b, ANY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANY);
    if (!r) r = anyType_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ANY DEFINED BY IDENTIFIER_STRING
  private static boolean anyType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anyType_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ANY, DEFINED, BY, IDENTIFIER_STRING);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (macroDefinition|typeAssignment|valueAssignment) SEMI_COLON?
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ASSIGNMENT, "<assignment>");
    r = assignment_0(b, l + 1);
    r = r && assignment_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // macroDefinition|typeAssignment|valueAssignment
  private static boolean assignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = macroDefinition(b, l + 1);
    if (!r) r = typeAssignment(b, l + 1);
    if (!r) r = valueAssignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SEMI_COLON?
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    consumeToken(b, SEMI_COLON);
    return true;
  }

  /* ********************************************************** */
  // assignment+
  static boolean assignmentList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentList")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assignment(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!assignment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assignmentList", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<param>> ( VERTICAL_BAR <<param>> )*
  static boolean bar_separated_list(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "bar_separated_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _param.parse(b, l);
    r = r && bar_separated_list_1(b, l + 1, _param);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( VERTICAL_BAR <<param>> )*
  private static boolean bar_separated_list_1(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "bar_separated_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!bar_separated_list_1_0(b, l + 1, _param)) break;
      if (!empty_element_parsed_guard_(b, "bar_separated_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // VERTICAL_BAR <<param>>
  private static boolean bar_separated_list_1_0(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "bar_separated_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, VERTICAL_BAR);
    r = r && _param.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BINARY_LITERAL
  static boolean binaryValue(PsiBuilder b, int l) {
    return consumeToken(b, BINARY_LITERAL);
  }

  /* ********************************************************** */
  // nameValueList
  public static boolean bitOrObjectIdentifierValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitOrObjectIdentifierValue")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nameValueList(b, l + 1);
    exit_section_(b, m, BIT_OR_OBJECT_IDENTIFIER_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // BIT_STRING valueOrConstraintList?
  static boolean bitStringType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitStringType")) return false;
    if (!nextTokenIs(b, BIT_STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BIT_STRING);
    r = r && bitStringType_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // valueOrConstraintList?
  private static boolean bitStringType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitStringType_1")) return false;
    valueOrConstraintList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // BITS valueOrConstraintList?
  static boolean bitsType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitsType")) return false;
    if (!nextTokenIs(b, BITS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BITS);
    r = r && bitsType_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // valueOrConstraintList?
  private static boolean bitsType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitsType_1")) return false;
    valueOrConstraintList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // BOOLEAN
  static boolean booleanType(PsiBuilder b, int l) {
    return consumeToken(b, BOOLEAN);
  }

  /* ********************************************************** */
  // TRUE | FALSE
  static boolean booleanValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanValue")) return false;
    if (!nextTokenIs(b, "", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // nullType | booleanType | realType | integerType | objectIdentifierType | stringType | bitStringType |
  //                 bitsType | sequenceType | sequenceOfType | setType | setOfType | choiceType | enumeratedType |
  //                 selectionType | taggedType | anyType
  public static boolean builtinType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtinType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, BUILTIN_TYPE, "<builtin type>");
    r = nullType(b, l + 1);
    if (!r) r = booleanType(b, l + 1);
    if (!r) r = realType(b, l + 1);
    if (!r) r = integerType(b, l + 1);
    if (!r) r = objectIdentifierType(b, l + 1);
    if (!r) r = stringType(b, l + 1);
    if (!r) r = bitStringType(b, l + 1);
    if (!r) r = bitsType(b, l + 1);
    if (!r) r = sequenceType(b, l + 1);
    if (!r) r = sequenceOfType(b, l + 1);
    if (!r) r = setType(b, l + 1);
    if (!r) r = setOfType(b, l + 1);
    if (!r) r = choiceType(b, l + 1);
    if (!r) r = enumeratedType(b, l + 1);
    if (!r) r = selectionType(b, l + 1);
    if (!r) r = taggedType(b, l + 1);
    if (!r) r = anyType(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // nullValue | booleanValue | specialRealValue | numberValue | binaryValue | hexadecimalValue |
  //                  stringValue | bitOrObjectIdentifierValue
  public static boolean builtinValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtinValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, BUILTIN_VALUE, "<builtin value>");
    r = nullValue(b, l + 1);
    if (!r) r = booleanValue(b, l + 1);
    if (!r) r = specialRealValue(b, l + 1);
    if (!r) r = numberValue(b, l + 1);
    if (!r) r = binaryValue(b, l + 1);
    if (!r) r = hexadecimalValue(b, l + 1);
    if (!r) r = stringValue(b, l + 1);
    if (!r) r = bitOrObjectIdentifierValue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
